force-app/main/default/objects/Flow_Error_Logs__c/Flow_Error_Logs__c.object-meta.xml
<CustomObject>
    <label>Flow Error Log</label>
    <nameField>
        <displayFormat>FlowErrorID-{0000}</displayFormat>
        <label>Flow Error Logs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flow Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>