force-app/main/default/objects/Flow_Error_Logs__c/fields/Element_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Element_API_Name__c</fullName>
    <label>Element API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>