force-app/main/default/objects/Flow_Error_Logs__c/fields/Element_Type__c.field-meta.xml
<CustomField>
    <fullName>Element_Type__c</fullName>
    <label>Element Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>