force-app/main/default/objects/Flow_Error_Logs__c/fields/Error_Id__c.field-meta.xml
<CustomField>
    <fullName>Error_Id__c</fullName>
    <label>Error Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>