force-app/main/default/objects/Flow_Error_Logs__c/fields/Flow_Error_Logs_ID__c.field-meta.xml
<CustomField>
    <fullName>Flow_Error_Logs_ID__c</fullName>
    <displayFormat>ErrorLogID-{0000}</displayFormat>
    <label>Flow Error Logs ID</label>
    <type>AutoNumber</type>
</CustomField>